--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,12 +1,32 @@
 <% include ./partial/header %>
-<h1>
-	SignUp Page
-</h1>
-<form action="/register" method="POST">
-	<input type="text" name="username" placeholder="Usename">
-	<input type="password" name="password" placeholder="Password">
-	<button>
-		Submit
-	</button>
-</form>
+<div class="container">
+	<div class="row">
+		<h1 style="text-align:center">
+		SignUp
+		</h1>
+		<div style="width:30%;margin:0 auto;">
+			<form action="/campground" method="POST">
+				<div class="form-group">
+					<input type="text" class="form-control" name="username" placeholder="Username">
+				</div>
+				<div class="form-group">
+				<input type="text" class="form-control" name="password" placeholder="Password">
+				</div>
+				<div class="form-group">
+				<input type="text" class="form-control" name="admin-code" placeholder="Admin Code[For only admins,leave blank otherwise]">
+				</div>
+				<div class="form-group">
+					<button class="btn btn-lg btn-primary btn-default btn-block">
+						Submit
+					</button>
+				</div>
+			</form>
+			<div style="text-align:center">
+				<a href="/">
+				GO BACK
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
 <% include ./partial/footer %>
