--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,29 @@
 <% include ./partial/header %>
-<h1>
-	LOGIN PAGE
-</h1>
-
-<form action="/" method="POST">
-	<input type="text" name="username" placeholder="Username">
-	<input type="password" name="password" placeholder="Password">
-	<input type="submit" value="Login">
-</form>
+<div class="container">
+	<div class="row">
+		<h1 style="text-align:center">
+		Login
+		</h1>
+		<div style="width:30%;margin:0 auto;">
+			<form action="/campground" method="POST">
+				<div class="form-group">
+					<input type="text" class="form-control" name="username" placeholder="Username">
+				</div>
+				<div class="form-group">
+				<input type="text" class="form-control" name="password" placeholder="Password">
+				</div>
+				<div class="form-group">
+					<button class="btn btn-lg btn-primary btn-default btn-block">
+						Login
+					</button>
+				</div>
+			</form>
+			<div style="text-align:center">
+				<a href="/register">
+				Signup
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
 <% include ./partial/footer %>
